complete the alert api and update the device api, add  get mock healthData api
