# service/src/models/alert.js
@@ -2,6 +2,7 @@
 import { Model } from 'sequelize';
 import sequelize from '../config/db.js';
 import User from './user.js';
+import { DataTypes } from 'sequelize';
 
 // 警报模型
 class Alert extends Model {}
@@ -23,11 +24,12 @@ Alert.init(
       type: DataTypes.BOOLEAN,
       defaultValue: false,
     },
-    position: {
+    location: {
       type: DataTypes.STRING,
     },
     description: {
       type: DataTypes.TEXT,
+      allowNull: true,
     },
   },
   {
@@ -38,7 +40,7 @@ Alert.init(
 );
 
 // 建立关系
-Alert.belongsTo(User, { foreignKey: 'user_id', as: 'user' });
-User.hasMany(Alert, { foreignKey: 'user_id', as: 'alerts' });
+Alert.belongsTo(User, { foreignKey: 'userId', as: 'user' });
+User.hasMany(Alert, { foreignKey: 'userId', as: 'alerts' });
 
 export default Alert;
